# layered-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  hotel.db  main.py  pyproject.toml  requirements.txt  test_exceptions.py
hotel/: config.py  exceptions.py  test_booking.py
hotel/db/: create_db.py  db_interface.py  engine.py  models.py
hotel/middleware/: exception_handlers.py  rate_limit_handlers.py  rate_limiter.py
hotel/operations/: bookings.py  customers.py  interface.py  rooms.py
hotel/routers/: bookings.py  customers.py  health.py  rooms.py
tests/: test_rate_limiting.py
tests/integration/: test_complete_suite.py
tests/unit/: test_bookings.py
