[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "layered-api"
version = "0.1.0"
description = "A layered FastAPI-based API for a hotel booking system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ArjanCodes"},
    {name = "Mark Henry Atwood"},
]
dependencies = [
    "fastapi",
    "sqlalchemy",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "slowapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
